--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,9 @@
     font-size: 20px;
     color: #eb89dd;
     text-decoration: none;
+    font-weight: bold;
 }
-.a:link, a:visited, a:hover {
+a:link, a:visited, a:hover, a:active { /*클래스가 아니라서 앞에 콤마 ㄴㄴ*/
     text-decoration: none;
     color: #eb89dd;
 }
@@ -68,7 +69,7 @@
 
 .sub-word {
     font-size: 15px;
-    border: 1px solid #333;
+    border: 1px solid #333; /*요놈이 글자 옆에 테두리씌우기, 원하는만큼 사이즈 밑에서 조절해라*/
     width: 330px;
     height: 50px;
     line-height: 50px;
@@ -81,7 +82,7 @@
     margin-top: 0;
     margin-bottom: 30px;
 }
-.news  {
+.news  { /*이걸로 묶어놓고 해야 사진이 두개가 같이 들옴ㅇㅇ*/
     width: 600px;
     height: 220px;
     font-size: 0;
